# vision-ui

./: .clang-format  .clang-tidy  .gitignore  README-zh-CN.md  README.md  main.c  main.cpp  main_english.cpp  main_mandarin.cpp  pyproject.toml  response.py  xmake.lua
.codex/: config.toml
.github/workflows/: ci.yml  release-rust-crate.yml
bindings/rust/: Cargo.toml  LICENSE  README.md  build.rs
bindings/rust-simulator-240x240/: Cargo.toml  build.rs
bindings/rust-simulator-240x240/src/: lib.rs
bindings/rust/examples/: embedded_graphics_driver.rs  lifecycle.rs  menu_tree.rs  sdl.rs
bindings/rust/examples/support/: mod.rs
bindings/rust/native/include/: vision_ui_config.h
bindings/rust/native/include/vision/: vision_ui.h  vision_ui_animation.h  vision_ui_core.h  vision_ui_draw_driver.h  vision_ui_item.h  vision_ui_renderer.h
bindings/rust/native/src/: vision_ui_animation.c  vision_ui_core.c  vision_ui_item.c  vision_ui_renderer.c
bindings/rust/scripts/: sync-native.sh
bindings/rust/src/: bindings.rs  config.rs  config_bindings.rs  driver.rs  lib.rs  raw.rs
bindings/sdl-u8g2-240x240/: Cargo.toml  README.md  build.rs
bindings/sdl-u8g2-240x240/src/: lib.rs
docs/: api-zh-CN.md  api.md  config-zh-CN.md  config.md  layout-formal.drawio  migration-zh-CN.md  migration.md  project-layout-zh-CN.md  project-layout.md
examples/esp32/: README-zh-CN.md  README.md
examples/simulator/: README-zh-CN.md  README.md
include/: vision_ui_config.h
include/driver/: u8g2.c  u8g2.h  u8g2_240x240.c
include/font/: chinese.h
include/vision/: astra_ui_core.c  astra_ui_core.h  astra_ui_draw_driver.h  astra_ui_drawer.c  astra_ui_drawer.h  astra_ui_item.c  astra_ui_item.h  vision_ui.h  vision_ui.hpp  vision_ui_animation.c  vision_ui_animation.h  vision_ui_core.c  vision_ui_core.h  vision_ui_draw_driver.h  vision_ui_drawer.c  vision_ui_drawer.h  vision_ui_item.c  vision_ui_item.h  vision_ui_renderer.c  vision_ui_renderer.h  vision_ui_types.h
scripts/: response.py
src/: vision_ui_animation.c  vision_ui_core.c  vision_ui_item.c  vision_ui_renderer.c
src/driver/: u8g2.c  u8g2.h  u8g2_240x240_display.h
test/: mock_driver.c  mock_driver.h  run_coverage.sh  run_leak_check.sh  run_tests.sh  test_api.c  test_main.c  unity.c  unity.h
