[package]
name = "vision-ui"
version = "0.1.0"
edition = "2024"
authors = ["Finn Sheng"]
categories = ["gui", "embedded", "api-bindings", "no-std", "rendering::graphics-api"]
license = "GPL-3.0-only"
description = "Idiomatic Rust crate for Vision UI"
repository = "https://github.com/robcholz/vision-ui"
build = "build.rs"
include = [
    "Cargo.toml",
    "README.md",
    "build.rs",
    "examples/**",
    "scripts/**",
    "src/**",
    "native/**",
]

[lib]
name = "vision_ui"
path = "src/lib.rs"

[features]
default = ["preset-240x240"]
alloc = []
debug-overlay = []
preset-240x240 = []
preset-128x64 = []
sdl-example = []

[dependencies]
thiserror = "2"

[dev-dependencies]
embedded-graphics = "0.8"
minifb = "0.28"
# local only
# sdl-u8g2-240x240 = { path = "../sdl-u8g2-240x240" }

[build-dependencies]
bindgen = "0.72"
cc = "1"

[[example]]
name = "sdl"
required-features = ["sdl-example"]
